fix scrollbar hovering, and change to windows style scrollbar

--- a/.config/discord/custom.css
+++ b/.config/discord/custom.css
@@ -4423,5 +4423,10 @@ html.platform-osx .titleBar-1it3bQ {
 .search-2Mwzzq:not(.open-1F8u2c):hover .icon-18rqoe {color: var(--text-muted);}
 
 /* Show scrollbar only when hovering */
-*::-webkit-scrollbar { visibility: hidden; }
-*:hover::-webkit-scrollbar { visibility: visible; }
+*::-webkit-scrollbar { display: initial; }
+*:hover::-webkit-scrollbar { display: contents; }
+
+/* Windows style scrollbar */
+*::-webkit-scrollbar-thumb {
+    border-radius: 0px !important;
+}
